--- a/index.html
+++ b/index.html
@@ -414,19 +414,17 @@
     height: 52px;
   }
 }
-
-/* Layout para PC — bem mais largo */
 .wrapper {
-  max-width: 1700px;
+  max-width: 100%;      
   width: 100%;
-  margin: 0 auto;
-  padding: 32px 48px;
+  margin: 0;            
+  padding: 32px 48px;   
+  box-sizing: border-box;
 }
-
 @media (max-width: 1024px) {
-  /* No celular / telas menores continua ajustando certinho */
   .wrapper {
     max-width: 100%;
+    width: 100%;
     padding: 16px;
   }
 }
