--- a/index.html
+++ b/index.html
@@ -416,9 +416,9 @@
 }
 .wrapper {
   max-width: 100%;      
-  width: 100%;
+  width: 100%vw;
   margin: 0;            
-  padding: 32px 48px;   
+  padding: 24px 24px;   
   box-sizing: border-box;
 }
 @media (max-width: 1024px) {
