--- a/index.html
+++ b/index.html
@@ -585,6 +585,9 @@
             <option value="Foi liberado após termo / audiência.">
               Foi liberado após termo / audiência.
             </option>
+              <option value="Foi multado.">
+              Foi multado.
+            </option>
           </select>
         </div>
 
